SKI-203 - added some tests and refactor for websocket.  working on tidying up build file