@@ -66,17 +66,7 @@ dependencies {
     )
     //compile project(':layers')
 
-    testImplementation(
-            'org.scalatest:scalatest_2.11:3.0.0',
-            'org.junit.jupiter:junit-jupiter-api:5.1.0',
-            // https://mvnrepository.com/artifact/com.sun.jersey/jersey-client
-            'org.glassfish.jersey.core:jersey-client:2.5.1',
-            'com.fasterxml.jackson.core:jackson-core:2.9.7',
-            'org.mockito:mockito-all:1.10.19'
-    )
-    testRuntimeOnly(
-            'org.junit.jupiter:junit-jupiter-engine:5.1.0'
-    )
+
     integrationTestCompile(
             'org.scalatest:scalatest_2.11:3.0.0',
             'org.junit.jupiter:junit-jupiter-api:5.1.0',
@@ -90,39 +80,6 @@ dependencies {
     )
 }
 
-test {
-    useJUnitPlatform()
-
-    // explicitly include or exclude tests
-    include 'ski/crunch/**'
-
-
-    // show standard out and standard error of the test JVM(s) on the console
-    testLogging.showStandardStreams = true
-
-    // set heap size for the test JVM(s)
-    minHeapSize = "128m"
-    maxHeapSize = "512m"
-
-    // set JVM arguments for the test JVM(s)
-    jvmArgs '-XX:MaxPermSize=256m'
-
-    // listen to events in the test execution lifecycle
-    beforeTest { descriptor ->
-        logger.lifecycle("Running test:  $descriptor")
-    }
-
-    // Fail the 'test' task on the first test failure
-    failFast = true
-
-    // listen to standard out and standard error of the test JVM(s)
-    onOutput { descriptor, event ->
-        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
-    }
-
-    // workingDir = new File('src/test/')
-}
-
 
 jacoco {
     toolVersion = "0.8.2"
@@ -131,14 +88,7 @@ jacoco {
 }
 
 jacocoTestCoverageVerification {
-//    afterEvaluate {
-//        classDirectories = files(classDirectories.files.collect {
-//            fileTree(dir: it, exclude:  [
-//                    'com/garmin/fit/**',
-//                    'ski/crunch/activity/model/*'
-//            ])
-//        })
-//    }
+
 }
 jacocoTestReport {
     reports {
